syntax = "proto3";

package api;
import "google/api/annotations.proto";
import "include/graphql.proto";
option go_package = "./api";

message ActionsRequest {
  string address = 1;
  uint64 height = 2;
  uint64 offset = 3;
  uint64 size = 4;
  string sort = 5;
}

message EvmTransferDetailResult {
  string actHash = 1;
  uint64 blkHeight = 2;
  string sender = 3;
  string recipient = 4;
  string blkHash = 5;
  string amount = 6;
  uint64 timeStamp = 7;
}
message EvmTransferDetailListByAddressResponse {
  uint64 count = 1;
  repeated EvmTransferDetailResult results = 2;
}
message AllActionsByAddressResult {
  string actHash = 1;
  uint64 blkHeight = 2;
  string sender = 3;
  string recipient = 4;
  string actType = 5;
  string amount = 6;
  uint64 timeStamp = 7;
  enum RecordType {
		NATIVE = 0;
		XRC20 = 1;
    XRC721 = 2;
    EVMTRANSFER = 3;
	}
  RecordType recordType = 8;
}
message AllActionsByAddressResponse {
  uint64 count = 1;
  repeated AllActionsByAddressResult results = 2;
}
service ActionsService {

  rpc GetEvmTransferDetailListByAddress(ActionsRequest) returns (EvmTransferDetailListByAddressResponse) {
    option (graphql.schema) = {
      type: QUERY 
      name: "GetEvmTransferDetailListByAddress" 
    };
    option (google.api.http) = {
      post: "/api.ActionsService.GetEvmTransferDetailListByAddress"
      body: "*"
    };
  };
  rpc GetAllActionsByAddress(ActionsRequest) returns (AllActionsByAddressResponse) {
    option (graphql.schema) = {
      type: QUERY 
      name: "GetAllActionsByAddress" 
    };
    option (google.api.http) = {
      post: "/api.ActionsService.GetAllActionsByAddress"
      body: "*"
    };
  };
}